adding functionalities to done and remove button using event delegation and improve css

--- a/todo.html
+++ b/todo.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <footer>
-        <h4 class="to-center footer" style="font-size:1.6rem">Made with 💖 by Nikhil</h4>
+        <h4 class="to-center footer">Made with 💖 by Nikhil</h4>
     </footer>
 </body>
 </html>
